# mastermind-framework

./: .claudeignore  .continue-here.md  .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  :  AGENTS.md  CHANGELOG-v1.3.0.md  CLAUDE.md  DEPLOYMENT.md  Dockerfile  EXAMPLES.md  HANDOFF-2026-03-12.md  HANDOFF.md  LICENSE  QUICKSTART.md  README.md  RESUME.md  SPEC.md  TECHNICAL-DEBT.md  TECHNICAL_DEBT.md  TROUBLESHOOTING.md  docker-compose.dev.yml  docker-compose.yml  install.ps1  install.sh  main.py  mastermind.db  playwright.config.ts  pyproject.toml
.claude/: README.md  SESSION-NEXT.md  domain-config.json  domain-context.md  handoff.md  settings.json  zai.sh
.claude/agents/mm/rediscovery-auditor/: pyproject.toml  rediscovery-auditor.md
.claude/agents/mm/rediscovery-auditor/core/: __init__.py  detector.py  orchestrator.py
.claude/agents/mm/rediscovery-auditor/core/strategies/: __init__.py  base.py  node.py  python.py  rust.py
.claude/agents/mm/rediscovery-auditor/core/tests/: __init__.py  test_detector.py  test_integration.py  test_node_strategy.py  test_python_strategy.py  test_rust_strategy.py
.mastermind/: config.yaml
.planning/: .agent-B2-running  .agent-D1-running  .agent-D2-running  .continue-here.md  AUDIT-TRAIL-GUIDE.md  AUDIT-TRAIL-IMPLEMENTATION-SUMMARY.md  BRAIN-FEED-01-product.md  BRAIN-FEED-02-ux.md  BRAIN-FEED-03-ui.md  BRAIN-FEED-04-frontend.md  BRAIN-FEED-05-backend.md  BRAIN-FEED-06-qa.md  BRAIN-FEED-07-growth.md  BRAIN-FEED.md  BUGFIXES.md  D3-SUMMARY.md  D3-manual-testing-guide.md  D3-verification-report.md  FRAMEWORK-STATUS.md  GOLDEN-SNAPSHOTS-CREATED.md  HANDOFF.md  HOOK-IMPLEMENTATION.md  MILESTONES.md  MM-FLOW-ARCHITECTURE.md  MM-FLOW-COMPLETION-PLAN.md  MM-FLOW-CONTEXT-GUIDE.md  MM-FLOW-SETUP.md  PROJECT.md  REDISCOVERY-PROGRESS.md  REQUIREMENTS.md  RESUME-2026-03-13.md  RETROSPECTIVE.md  ROADMAP.md  RUST-FIXES-APPLIED.md  SESSION-2026-03-13-PHASE2-EXECUTED.md  SESSION-2026-03-13-PHASE2-PLANNED.md  SESSION-2026-03-13.md  SESSION-2026-04-15.md  SESSION-2026-04-23.md  SESSION-CHECKPOINT.md  (+12 more)
.serena.disabled/: project.yml
PRPs/: .continue-here.md  PRP-000-initial-setup.md  PRP-001-mastermind-cli.md  PRP-002-sources-yaml.md  PRP-003-system-prompts.md  PRP-004-notebooklm-integration.md  PRP-005-brain-07-evaluator.md  PRP-006-orchestrator.md  PRP-008-orchestrate-cli.md  PRP-009-memory-learning-system.md  PRP-010-brain-08-master-interviewer.md  PRP-011-brain-08-core-infrastructure.md  PRP-012-brain-08-notebooklm-setup.md  PRP-013-brain-08-orchestrator-integration.md  PRP-014-brain-08-slash-command.md  PRP-015-brain-08-learning-system.md  PRP-016-brain-08-testing-polish.md  PRP-017-brain-08-release.md  PRP-03-00-pure-function-architecture.md  PRP-MASTER-coordinator.md
apps/control-plane/: Cargo.toml
apps/control-plane/src/: config.rs  flow.rs  lib.rs  main.rs
apps/control-plane/src/bindings/: mod.rs
apps/control-plane/src/grpc/: client.rs  client_tests.rs  mod.rs
apps/control-plane/src/handlers/: mod.rs  tasks.rs  tasks_tests.rs
apps/control-plane/src/postgres/: mod.rs  models.rs  repo.rs  repo_tests.rs
apps/control-plane/src/proto/: mod.rs
benches/: PYO3-QUICK-START.md  PYO3-SPIKE-SUMMARY.md  pyo3_import_test.py  pyo3_vs_grpc.py  (+1 more)
rust_control_plane/: Cargo.toml  build.rs
rust_control_plane/.sqlx/: query-0509e11256d0914833fd4923464bd2f99ad8eb654f37adda82e09dc76a303796.json  query-62686eb77e3fca1329a51155ffaa00900d12f8f713066f368b5af6a91f6158f5.json  query-deefc0cd20045a0802749c8ce537dc40de070aee2366ca5fdb8216eeb09ab09a.json
rust_control_plane/docs/: grpc-design.md
rust_control_plane/migrations/: 001_initial_postgresql.sql  002_activity_log_event_sourcing.sql  003_add_messages_table.sql  003_add_rbac.sql  004_dual_write_triggers.sql  005_activity_log_indexes.sql  006_enforce_immutability.sql  007_create_cost_metrics_mv.sql  008_cost_refresh_function.sql  009_add_dlq_table.sql  010_add_delivery_status.sql
rust_control_plane/proto/: worker.proto
rust_control_plane/src/: lib.rs  main.rs  sqlite_reader.rs  state.rs
rust_control_plane/src/auth/: jwt.rs  middleware.rs  mod.rs  models.rs  rotation.rs
rust_control_plane/src/channels/: email.rs  instagram.rs  mod.rs  whatsapp.rs
rust_control_plane/src/db/: dual_write.rs  migration.rs  mod.rs  models.rs  pool.rs
rust_control_plane/src/dlq/: mod.rs  retry_worker.rs
rust_control_plane/src/event_sourcing/: mod.rs  models.rs  store.rs
rust_control_plane/src/grpc/: events.rs  mod.rs  worker.rs
rust_control_plane/src/handlers/: audit.rs  auth.rs  dlq.rs  health.rs  migrate.rs  mod.rs  webhook.rs
rust_control_plane/src/health/: live.rs  mod.rs  ready.rs
rust_control_plane/src/mastermind/: events.v1.rs  mod.rs  worker.rs
rust_control_plane/src/metrics/: latency.rs  mod.rs  prometheus.rs  queue.rs
rust_control_plane/src/observability/: latency.rs  mod.rs
rust_control_plane/src/proto/: mod.rs  worker.rs
rust_control_plane/src/queue/: mod.rs  worker.rs
rust_control_plane/src/tracing/: interceptor.rs  metadata.rs  middleware.rs  mod.rs
rust_control_plane/src/websocket/: ghost_mode.rs  handler.rs  hub.rs  mod.rs
rust_control_plane/tests/: LOAD_TEST_GUIDE.md  dlq_test.rs  email_test.rs  instagram_test.rs  k6-connection-limit.js  k6-websocket-load.js  load_test.rs  webhook_test.rs  whatsapp_integration_test.rs  whatsapp_test.rs
tools/mastermind-cli/: INSTALL.md  main.py  pyproject.toml
tools/mastermind-cli/.claude/hooks/: load-mastermind-context.sh
tools/mastermind-cli/mastermind_cli/: __init__.py  brain_registry.py  main.py
tools/mastermind-cli/mastermind_cli/commands/: brain.py  framework.py  install.py  orchestrate.py  source.py
tools/mastermind-cli/mastermind_cli/orchestrator/: __init__.py  brain_executor.py  coordinator.py  evaluator.py  flow_detector.py  mcp_integration.py  mcp_wrapper.py  notebooklm_client.py  output_formatter.py  plan_generator.py
tools/mastermind-cli/mastermind_cli/utils/: git.py  validation.py
tools/mastermind-cli/tests/: test_brain.py  test_orchestration.py  test_orchestration_e2e.py  test_source.py
(+1888 files in other folders)
