[project]
name = "mastermind-framework"
version = "1.0.0"
description = "MasterMind Framework - Cognitive architecture for expert knowledge consultation"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "gitpython>=3.1.0",
    "semver>=3.0.0",
]

[project.scripts]
mastermind = "mastermind_cli.main:cli"
mm = "mastermind_cli.main:cli"

[project.optional-dependencies]
mcp = ["notebooklm-mcp>=0.1.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mastermind_cli"]

[tool.uv]
package = true

[tool.uv.workspace]
members = []
