[package]
name = "rust_control_plane"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
axum = "0.7"
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
jsonwebtoken = "9.2"
bcrypt = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
futures = "0.3"

[dev-dependencies]
sqlx-cli = "0.8"
