[package]
name = "rust_control_plane"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid", "json"] }
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.35", features = ["full"] }
tonic = "0.11"
prost = "0.12"
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter", "registry"] }
tracing-opentelemetry = "0.22.0"
opentelemetry = "0.21.0"
opentelemetry-otlp = "0.14.0"
opentelemetry-semantic-conventions = "0.14.0"
jsonwebtoken = "9.2"
bcrypt = "0.15"
rusqlite = { version = "0.32", features = ["bundled"] }
futures = "0.3"
tokio-tungstenite = "0.29.0"
futures-util = "0.3.32"
dashmap = "6.1.0"
prometheus = "0.14.0"
lazy_static = "1.5.0"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"
hex = "0.4"

[dev-dependencies]
sqlx-cli = "0.8"

[build-dependencies]
tonic-build = "0.11"
