[package]
name = "mastermind-control-plane"
version = "0.1.0"
edition = "2021"

[lib]
name = "mastermind_control_plane"
crate-type = ["cdylib", "rlib"]

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tonic = "0.11"
prost = "0.12"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "postgres", "uuid", "chrono"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PyO3 dependencies (for Python bindings spike)
pyo3 = { version = "0.20", features = ["extension-module", "abi3"], optional = true }
